@@ -1,5 +1,5 @@
 <?php
-// $Id: views.install,v 1.50.4.9 2010-11-18 07:57:06 dereine Exp $
+// $Id: views.install,v 1.50.4.10 2010-12-24 08:25:01 dereine Exp $
 /**
  * @file views.install
  * Contains install and update functions for Views.
@@ -502,4 +502,32 @@ function views_update_6012() {
     ->fields(array('cache' => DRUPAL_NO_CACHE));
   
   return $ret;
+}
+
+
+/**
+ * Add a human readable name.
+ */
+function views_schema_6013() {
+  $schema = views_schema(__FUNCTION__);
+  $schema['views_view']['fields']['human_name'] = array(
+    'type' => 'varchar',
+    'length' => '255',
+    'default' => '',
+    'description' => 'A human readable name used to be displayed in the admin interface',
+  );
+  return $schema;
+}
+
+function views_update_6013() {
+  $ret = array();
+
+  $new_field = array(
+    'type' => 'varchar',
+    'length' => '255',
+    'default' => '',
+    'description' => 'A human readable name used to be displayed in the admin interface',
+  );
+
+  db_add_field($ret, 'views_view', 'human_name', $new_field);
 }
